feat: extend shared runtime services